Fix icon and logo overlap for phone

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,9 @@
   .navbar-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 80px;
+    max-width: 1500px;
   }
   
   .container {
@@ -29,6 +31,7 @@
   .navbar-logo {
     color: #31de79;
     justify-self: start;
+    margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
@@ -86,15 +89,14 @@
   }
   
   @media screen and (max-width: 960px) {
-    .NavbarItems {
+    .nav-item {
       position: relative;
     }
-  
+
     .nav-menu {
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
       position: absolute;
       top: 80px;
       left: -100%;
@@ -135,7 +137,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      transform: translate(25%, 50%);
+      transform: translate(2%, 50%);
     }
   
     .menu-icon {
