--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -7,7 +7,6 @@ h2 {
 }
 
 
-
 .home__hero-section {
     color: #fff; 
     padding: 160px 0;
@@ -36,7 +35,7 @@ h2 {
 
 .home__hero-text-wrapper {
     max-width: 540px;
-    padding-top: 0;
+    padding-top: 0px;
     padding-bottom: 60px;
 }
 
@@ -114,7 +113,7 @@ img {
     max-height: 350px;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 960px) {
     .container {
         padding-right: 30px;
         padding-left: 30px;
